Bug 147842 - Changing text to bold continuously slower so seems to Hang now
Summary: Changing text to bold continuously slower so seems to Hang now
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords: bibisected, bisected, perf, regression
: 149844 (view as bug list)
Depends on:
Blocks: orcus_bugs
  Show dependency treegraph
 
Reported: 2022-03-08 11:51 UTC by Xisco Faulí
Modified: 2025-06-13 08:52 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
file with some values (7.47 KB, application/vnd.oasis.opendocument.spreadsheet)
2022-03-10 13:02 UTC, Tünde Tóth
Details
Flamegraph (106.61 KB, image/svg+xml)
2022-03-11 16:54 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-03-08 11:51:27 UTC
Steps to reproduce:
1. Open attachment 72285 [details] from bug 58874
2. Select all
3. Format - Text - Bold

-> LibreOffice hangs

Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: b461ada70158de5cd2e96a54147c8e46ee1ca4ac
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2022-03-08 11:52:53 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=ae60c27f936642ecd4391d11fcd73a6d461d0b7f

author	Tünde Tóth <toth.tunde@nisz.hu>	2021-03-24 14:07:15 +0100
committer	László Németh <nemeth@numbertext.org>	2021-03-30 13:36:24 +0200
commit ae60c27f936642ecd4391d11fcd73a6d461d0b7f (patch)
tree 66cbd17e135fdfd74578c17a04b3d1df8836f184
parent 7622d225efa0459ceaecbf947c0912823b5ff5c8 (diff)
tdf#99913 XLSX import: set filtered flag for rows

Bisected with: bibisect-linux64-7.4

Adding Cc: to Tünde Tóth
Comment 2 Tünde Tóth 2022-03-10 09:54:39 UTC
This is not regression, it didn't appear in XLSX documents before my commit.

Steps to reproduce:
1. Create a new document with some values.
2. Set the autofilter and filter a value.
3. Select all
4. Format - Text - Bold

-> LibreOffice hangs

Reproduced in:

Version: 7.1.0.0.alpha1 (x64)
Build ID: 987671387712c4f9061d6216ff2f001a7bb9e57b
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 3 Xisco Faulí 2022-03-10 10:09:23 UTC Comment hidden (obsolete)
Comment 4 Tünde Tóth 2022-03-10 13:02:47 UTC
Created attachment 178775 [details]
file with some values
Comment 5 Timur 2022-03-11 11:57:55 UTC
(In reply to Xisco Faulí from comment #3)
> (In reply to Tünde Tóth from comment #2)
> > This is not regression, it didn't appear in XLSX documents before my commit.
> it doesn't hang for me, could you please attach the document ?

No repro OO 3.3, it was fast, so regression.
Somewhat repro with 43 oldest, slow with 11 secs. 
With 43 latest even slower with 38 secs for me
With 5.2m and 6.2m it's 27 secs.
With 6.4m and 7.2m even slower, 45 secs.
With 7.3m and 7.4+ even more slow, 60 secs. 

I tested with attachment 178775 [details] but also confirm steps from comment #2. 
So moral could be: LO doesn't hang if you are patient enough..

I think that bibisects in 43all and 7.3 would be helpful to start.
Comment 6 Xisco Faulí 2022-03-11 12:48:40 UTC
@Julien, any chance you could get a perf graph here? thanks in advance
Comment 7 Timur 2022-03-11 16:10:25 UTC
I was testing some scripts to make automated bibisect (this would otherwise be very daunting bibisect ) and here is a reason of slow-down in 7.3 - upgrade:
commit d3e8452b68a9358a8e24a9904a4bcf24fd7f49fd
Date:   Wed Nov 3 21:36:53 2021 +0100
    source eb07a0e76fe240a184348d96a6cebf7c0a229ac0
author	Kohei Yoshida <kohei@libreoffice.org>
Upgrade mdds and liborcus to 2.0.0 and 0.17.0, respectively.
Comment 8 Julien Nabet 2022-03-11 16:54:13 UTC
Created attachment 178821 [details]
Flamegraph

Here's a Flamegraph retrieved on pc Debian x86-64 with master sources updated today (0234ddcac3acfd00f3a0a7ff89d943cd0b36e34c)
Comment 9 Xisco Faulí 2022-03-11 17:06:33 UTC Comment hidden (obsolete)
Comment 10 Luboš Luňák 2022-03-16 08:58:18 UTC
I can reproduce neither with steps from original comment nor from comment #2.
Comment 11 Xisco Faulí 2022-03-16 09:50:43 UTC Comment hidden (obsolete)
Comment 12 Timur 2022-03-16 11:01:04 UTC
(In reply to Luboš Luňák from comment #10)
> I cannot reproduce after I fixed it...

It's 6 seconds now. 

commit 00a5472d9ee2b952ecce43ed1b216260a9690070
Date:   Wed Feb 16 19:59:27 2022 +0100
    source 069c0b32e2ca85340bc79a222bae57bef7d1f674
    prev 91c54829e84a372e9ea7460474a84abbef3d1171

author	Luboš Luňák <l.lunak@collabora.com>	2022-02-16 12:59:31 +0100
clamp ColumnSpanSet::executeAction() to allocated columns
Comment 13 Timur 2022-03-16 11:08:50 UTC Comment hidden (obsolete)
Comment 14 Timur 2022-03-16 11:11:03 UTC
Oh, it's fixed also in Windows if tested with a fresh profile.
Comment 15 Xisco Faulí 2022-03-16 11:26:53 UTC
(In reply to Xisco Faulí from comment #11)
> (In reply to Luboš Luňák from comment #10)
> > I can reproduce neither with steps from original comment nor from comment #2.
> 
> mmm, that's weird. I can still reproduce it in
> 
> Version: 7.4.0.0.alpha0+ / LibreOffice Community
> Build ID: cfd82e7a2cc2b45b738eb0efa0827196d2de61a4
> CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
> Locale: es-ES (es_ES.UTF-8); UI: en-US
> Calc: threaded
> 
> Could you please share the info from Help - About LibreOffice ?

in my case, and following the original steps, it takes 1 minute and 25 seconds.
Meanwhile, in

Version: 6.4.0.0.alpha1+
Build ID: 9bc848cf0d301aa57eabcffa101a1cf87bad6470
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3; 
Locale: es-ES (es_ES.UTF-8); UI-Language: en-US
Calc: threaded

it takes just 1 second...
Comment 16 Timur 2022-03-16 11:42:03 UTC
In Comment 5 and Comment 12 I tested with with attachment 178775 [details], and that's Fixed. 
But really for original attachment 72285 [details] it's not.. so I set New again.
Comment 17 Commit Notification 2022-10-18 07:35:26 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ac859a4c6a7fce4efee9cdd45821a0c9e40e9e9a

tdf#147842 shrink selection to data area when applying to entire sheet

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Andreas Heinisch 2022-10-19 07:04:03 UTC
*** Bug 149844 has been marked as a duplicate of this bug. ***
Comment 19 BogdanB 2022-10-19 14:55:17 UTC
Very quick (1 second) in
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f3a82a8ba51195cf31b0f78164735acc7ebbcd2f
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Slow (40 seconds) in Version: 7.3.6.2 / LibreOffice Community 
Build ID: 30(Build:2)
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Ubuntu package version: 1:7.3.6-0ubuntu0.22.04.1
Calc: threaded