tdf#147842 shrink selection to data area when applying to entire sheet

This takes the time to apply the formating from "who knows how long" to about 500ms on my machine.

Change-Id: I202d023c58ea191bf080ef3a85068e8acab52dec
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141463
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>